--- a/debian/control
+++ b/debian/control
@@ -2,17 +2,13 @@ Source: zero-lliurex-pmb
 Section: admin
 Priority: optional
 Maintainer: Equipo LliureX <lliurex@gva.es>
-Uploaders: Angel Berlanas Vicente <lliurex_devel2@edu.gva.es>, Raul Rodrigo Segura <lliurex_devel3@edu.gva.es>, David Montalva Furio <montalva_dav@gva.es>, Alfons Lloret Sananton <lliurex_devel5@edu.gva.es>, Enrique Medina Gremaldos <lliurex_devel4@edu.gva.es>, Hector Garcia Huerta <lliurex_devel1@edu.gva.es>, Jose Carlos Garcia Monsalvez <garcia_josmon@gva.es>, Jose Alfredo Murcia Andres <murcia_josand@gva.es>, Jaime Munyoz Fayos <munyoz_jaifay@gva.es>, Miguel Garcia Gomez <garcia_miggom@gva.es>
-Build-Depends: llxsrchelper,debhelper (>= 7.0.50~), llxcfg-dev, zero-dev, librsvg2-bin
-Standards-Version: 3.9.3
+Uploaders: Equipo LliureX <lliurex@gva.es>
+Build-Depends: llxsrchelper,debhelper (>= 10),zero-dev
+Standards-Version: 4.1.2
 
 Package: zero-lliurex-pmb
 Architecture: all
-Depends: ${misc:Depends}, synaptic, llxcfg-runtime, epi-gtk
-Conflicts: zero-lliurex-pmb-installer
-Replaces: zero-lliurex-pmb-installer (<=0.5.3)
-Breaks: zero-lliurex-pmb-installer (<=0.5.3)
-Provides: zero-lliurex-pmb-installer
+Depends: ${misc:Depends},epi-gtk.zero-center
 Description: PMB Installer
  PMB Installer in all flavors instead of
  Lliurex Biblioteca Flavor
